# red-roving-rascal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cdk.json  pyproject.toml
.github/workflows/: e2e.yml  publish.yml
cdk/: .npmignore  cdk.json  package.json  tsconfig.json
cdk/src/: app.ts  rascal-construct.ts  rascal-stack.ts
clients/go/: README.md
clients/java/: README.md
deploy/: app.py
src/rascal/: __init__.py  app.py  auth.py  client.py  models.py  pipeline.py  registry.py  server.py  storage.py  suite_store.py
src/rascal/analyzers/: comprehend.py
src/rascal/cdk/: __init__.py  construct.py  gateway_config.py  stack.py
src/rascal/judges/: threshold.py  weighted.py
src/rascal/scorers/: pass_rate.py
tests/e2e/: test_gateway_e2e.py
tests/property/: test_comprehend_props.py  test_evaluate_api_props.py  test_pass_rate_scorer_props.py  test_pipeline_props.py  test_registry_props.py  test_suite_store_props.py  test_threshold_judge_props.py  test_weighted_judge_props.py
tests/unit/: test_app.py  test_cdk_agentcore.py  test_cdk_construct.py  test_client.py  test_comprehend_analyzer.py  test_mcp_client.py  test_models.py  test_pass_rate_scorer.py  test_pipeline.py  test_registry.py  test_storage.py  test_suite_store.py  test_threshold_judge.py  test_weighted_judge.py
